Maintain spec location information
Signed-off-by: Thomas Farr <tsfarr@amazon.com>